alteração no paragrafo da localização

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         Domingo: 9h as 18</p>
 
         <h2> Nossa Localização </h2>
-        <p> Rua das Americas, 3456 - Bela Vista, Votuporanga-SP</p>
+        <p>Votuporanga-SP</p>
 
         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7803.2897137133!2d-49.976243570500955!3d-20.417671450344347!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94bd591b7865d9a1%3A0x23b5e4625c2c1c4b!2zQXJuYWxkdcK0cyBDYWbDqSBCYXI!5e1!3m2!1spt-BR!2sbr!4v1742255572385!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
